--- a/server/.env
+++ b/server/.env
@@ -1,5 +1,16 @@
 PORT=5000
-URI=mongodb://localhost:27017
-JWT_SECRET=chattu-token
-ADMIN_SECRET_KEY=ALIMALIKALIMALIK1234
+MONGO_URI=mongodb://localhost:27017
 NODE_ENV=DEVELOPMENT
+
+JWT_SECRET=chattu-token
+ADMIN_SECRET_KEY=ALIMALIKALIMALIK
+
+CLOUDINARY_CLOUD_NAME=duwexuaai
+CLOUDINARY_API_KEY =244643393917874
+CLOUDINARY_API_SECRET =V5lxptn5_QXJz66a0GA8R3ftLVc
+
+
+
+
+
+
