sever issue fixed

--- a/server/.env
+++ b/server/.env
@@ -1,5 +1,5 @@
 PORT=5000
-MONGO_URI=mongodb://localhost:27017
+MONGO_URI=mongodb+srv://AliMalik:ALIMALIKALIMALIK1234@cluster0.oslqf.mongodb.net/
 NODE_ENV=DEVELOPMENT
 
 JWT_SECRET=chattu-token
